fixed the weird jumpy border on the headerbar

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -172,6 +172,7 @@ section {
 .navbar-form {
   display: inline-block;
   padding: 0 !important;
+  border: 0 !important;
   margin: 5px 0 !important;
 }
 
